@@ -248,11 +248,7 @@ addConfigFile("$Settings::tables_folder/portalsLOS.txt", \%portals_los, \&parseP
 addConfigFile("$Settings::tables_folder/recvpackets.txt", \%rpackets, \&parseDataFile2);
 addConfigFile("$Settings::tables_folder/servers.txt", \%masterServers, \&parseSectionedFile);
 addConfigFile("$Settings::tables_folder/sex.txt", \%sex_lut, \&parseDataFile2);
-addConfigFile("$Settings::tables_folder/skills.txt", \@Skills::skills, \&parseSkills);
-addConfigFile("$Settings::tables_folder/skills.txt", \%skills_lut, \&parseSkillsLUT);
-addConfigFile("$Settings::tables_folder/skills.txt", \%skills_rlut, \&parseSkillsReverseLUT_lc);
-addConfigFile("$Settings::tables_folder/skills.txt", \%skillsID_lut, \&parseSkillsIDLUT);
-addConfigFile("$Settings::tables_folder/skills.txt", \%skillsID_rlut, \&parseSkillsReverseIDLUT_lc);
+addConfigFile("$Settings::tables_folder/skills.txt", \%Skills::skills, \&parseSkills);
 addConfigFile("$Settings::tables_folder/spells.txt", \%spells_lut, \&parseDataFile2);
 addConfigFile("$Settings::tables_folder/skillsdescriptions.txt", \%skillsDesc_lut, \&parseRODescLUT);
 addConfigFile("$Settings::tables_folder/skillssp.txt", \%skillsSP_lut, \&parseSkillsSPLUT);
